   
 Minor changes:
 * @listen/^-listens now carry over ANSI. Requested by Mercutio. [MG]
 * @adisconnect now has %5, which is true if the disconnecting descriptor
   was @hide. Suggested by Minion@M*U*S*H [GM]
 * @pemit <name>= would show nospoof info if <name> was set Nospoof. Now,
   it does nothing at all. [MG]
 * The connect screen can now contain ANSI color. Patch by Mercutio.

Tools:
 * New script in utils/ for searching change logs: grep-cl.pl [SW]

Version 1.8.3 patchlevel 10                     Aug 24, 2009

Major changes:
 * Switched project management (Bug tracking, revision control, etc.)
   to Google Code. See http://code.google.com/p/pennmush

Minor changes:
 * @search and lsearch() now only charge 100 pennies if an evaluating
   search (EVAL, EPLAYER, EROOM, ETHING, EOBJECT, EEXIT or ELOCK) or
   an exhaustive attribute search (COMMAND, LISTEN) is performed.
 * The %u sub now works for built-in commands, as well as $-commands.
   Useful for @hooks. [MG]
 * The use command now understands english matching. Suggested by
   Yuriko.
 * Rooms can now use @open/open(). [MG]
 * Mortals can now use '@attribute <attrib>' to see the default flags
   of a standard attribute. [MG]
 * @channel/priv now uses 'thing' instead of 'object' for channels
   which allow things to join. 'object' is kept as an alias. [MG]
 * The chatdb now saves channel buffers and mogrifier objects, so you
   don't need to put @chan/buffer or @chan/mogrifier in @startup. [MG]

Flags:
 * The HEAR_CONNECT flag is now used (instead of MONITOR) to allow
   players to see 'GAME: Foo has [dis]connected.' messages. MONITOR
   on players now enables ^-patterns, the same as on things/rooms.
   Any players with the MONITOR flag will have it replaced with the
   HEAR_CONNECT flag automatically. Requested by Malix@8BitMUSH. [MG]

Functions:
  * lpids(), getpids(), and pidinfo() provide information about
    wait/semaphore process ids and processes. Suggested by
    Yuriko@M*U*S*H, code by Javelin.