@@ -33,6 +33,8 @@ Commands:
     instead of its name. [SW]
   * @pemit now takes a /port switch, which sends the message to the
     specified port. Suggested by Mercutio. [MG]
+  * @hook/list without a <command> now shows all commands which have hooks.
+    Based on a patch by Trinsec. [MG]
 
 Functions:
   * testlock(<boolexp>, <victim>) tests a lock without setting it.
@@ -75,6 +77,7 @@ Fixes:
  * @pemit <name>= would show nospoof info if <name> was set Nospoof. Now,
    it does nothing at all. [MG]
  * The connect screen can now contain ANSI color. Patch by Mercutio.
+ * Small bug fix in @search. [MG]
 
 Tools:
  * New script in utils/ for searching change logs: grep-cl.pl [SW]
